[package]
name = "baremetal-loongarch64-test"
version = "0.1.0"
edition = "2024"

[dependencies]
ns16550a = "0.5.0"
log = "0.4"
spin = "0.10.0"
buddy_system_allocator = "0.11.0"
tock-registers = "0.10.0"
loongArch64 = "0.2.5"

[dependencies.unwinding]
path = "../unwinding"
default-features = false
features = ["fde-gnu-eh-frame-hdr", "hide-trace", "panic", "personality", "unwinder"]

[dependencies.gimli]
version = "0.32.0"
default-features = false
features = ["read-core"]

[profile.dev]
opt-level = 0
panic = "unwind"
